syntax = "proto3";
package dclupgrade.types;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/upgrade/v1beta1/upgrade.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/dclupgrade/types";

// Msg defines the Msg service.
service Msg {
      rpc ProposeUpgrade(MsgProposeUpgrade) returns (MsgProposeUpgradeResponse);
  rpc ApproveUpgrade(MsgApproveUpgrade) returns (MsgApproveUpgradeResponse);
  rpc RejectUpgrade(MsgRejectUpgrade) returns (MsgRejectUpgradeResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgProposeUpgrade {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  cosmos.upgrade.v1beta1.Plan plan = 2 [(gogoproto.nullable) = false];
  string info = 3 [(gogoproto.moretags) = "validate:\"max=4096\""];
  int64 time = 4;
}

message MsgProposeUpgradeResponse {
}

message MsgApproveUpgrade {
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "validate:\"required\""];
  string name = 2 [(gogoproto.moretags) = "validate:\"required\""];
  string info = 3 [(gogoproto.moretags) = "validate:\"max=4096\""];
  int64 time = 4;
}

message MsgApproveUpgradeResponse {
}

message MsgRejectUpgrade {
  string creator = 1;
  string name = 2;
  string info = 3 [(gogoproto.moretags) = "validate:\"max=4096\""];
  int64 time = 4;
}

message MsgRejectUpgradeResponse {
}

// this line is used by starport scaffolding # proto/tx/message